# cryptoblin

./: .gitignore  CMakeLists.txt  README.md  README_ru.md
.github/workflows/: ci.yml
cli/: CMakeLists.txt  config.cpp  config.h  crypto.cpp  crypto.h  http.cpp  http.h  main.cpp  payload.cpp  payload.h  pow_solve.cpp  pow_solve.h  url.cpp  url.h
contrib/: config.ini.example
packaging/: CMakeLists.txt  cryptoblin.ini.example  cryptoblin.service
src/: CMakeLists.txt  config.cpp  config.h  db.cpp  db.h  main.cpp  pow.cpp  pow.h  util.cpp  util.h  version.h.in  webapi.cpp  webapi.h
tests/: CMakeLists.txt  test_util.cpp
web/: index.html  package-lock.json  package.json  vite.config.js
web/scripts/: gen-version.mjs
web/src/: App.svelte  app.css  version.js.in
web/src/components/: Create.svelte  Delete.svelte  Footer.svelte  QrModal.svelte  View.svelte
web/src/lib/: api.js  crypto.js  draft.js  format.js  i18n.js  payload.js  pow.js  storage.js  urlfrag.js  util.js
web/src/locales/: de.js  en.js  es.js  ru.js
web/tests/: e2e.test.mjs  proto.mjs
